--- a/view/index.html
+++ b/view/index.html
@@ -25,6 +25,8 @@
 <!-- <link rel="stylesheet" href="http://static.ebiznetworks.co.kr/css/layout_new.css?ver=20170208155027" type="text/css"/> -->
 <link rel="stylesheet" href="../src/css/layout_new_tmp.css" type="text/css"/>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!-- <script src="http://static.ebiznetworks.co.kr/js/index.js"></script> -->
+<script src="../src/js/index.js"></script>
 
 </head>
 <body>
