--- a/view/index.html
+++ b/view/index.html
@@ -32,6 +32,7 @@
 <body>
 <div dir="wrapper" id="wrap">
 	<div id="header">
+		<a class="crown_banner" href="http://crown.nolzzang.com/" target="_blank"><img src="http://img.nolzzang.com/crown/images/ebizwing_crown.jpg" alt="크라운게임바로가기" /></a>
 		<div id="top">
 			<ul id="top_menu">
 				<li id="Home"><a href="http://www.ebiznetworks.co.kr">Home</a></li>
