--- a/view/index.html
+++ b/view/index.html
@@ -32,7 +32,7 @@
 <body>
 <div dir="wrapper" id="wrap">
 	<div id="header">
-		<a class="crown_banner" href="http://crown.nolzzang.com/" target="_blank"><img src="http://img.nolzzang.com/crown/images/ebizwing_crown.jpg" alt="크라운게임바로가기" /></a>
+		<!-- <a class="crown_banner" href="http://crown.nolzzang.com/" target="_blank"><img src="http://img.nolzzang.com/crown/images/ebizwing_crown.jpg" alt="크라운게임바로가기" /></a> -->
 		<div id="top">
 			<ul id="top_menu">
 				<li id="Home"><a href="http://www.ebiznetworks.co.kr">Home</a></li>
@@ -54,6 +54,9 @@
 
 		<div id="i_logo"></div>
 		<div id="main_bnr">대한민국 No1 소프트웨어 개발회사 이비즈 네트웍스</div>
+			<div style="position:absoulte">
+				<a class="crown_banner" style="z-index: 10; left: 56.6%; top: 145px; right:0px;" href="http://www.nolzzang.com/nolzzang.php?pid=ebiz_crown" target="_blank"><img src="http://img.nolzzang.com/crown/images/ebizmain.png" alt="크라운게임바로가기"></a>
+			</div>
 			<div id="m_conteiner">
 			<div id="m_contents">
 				<div id="m_news">
