제보하기추가

--- a/view/index.html
+++ b/view/index.html
@@ -22,11 +22,11 @@
 <meta name="naver-site-verification" content="3fa220bed9a9cb53baf5ea2e5ecd1b8d095310d8"/>
 <link rel="shortcut icon" href="http://img.ebiznetworks.co.kr/ebiz_favicon.ico" />
 <link rel="stylesheet" href="http://static.ebiznetworks.co.kr/css/reset.css?ver=20170208155027" type="text/css"/>
-<!-- <link rel="stylesheet" href="http://static.ebiznetworks.co.kr/css/layout_new.css?ver=20170208155027" type="text/css"/> -->
-<link rel="stylesheet" href="../src/css/layout_new_tmp.css" type="text/css"/>
+<link rel="stylesheet" href="http://static.ebiznetworks.co.kr/css/layout_new.css?ver=20170208155027" type="text/css"/>
+<!-- <link rel="stylesheet" href="../src/css/layout_new_tmp.css" type="text/css"/> -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<!-- <script src="http://static.ebiznetworks.co.kr/js/index.js"></script> -->
-<script src="../src/js/index.js"></script>
+<script src="http://static.ebiznetworks.co.kr/js/index.js"></script>
+<!-- <script src="../src/js/index.js"></script> -->
 
 </head>
 <body>
@@ -134,9 +134,10 @@
 				<li><a href="/home/company/?dd=SAkhUTo=">수상 및 인증실적</a></li>
 				<li><a href="/home/company/?dd=SA0zTD1PP1cpEUY=">협회 가입현황</a></li>
 				<li><a href="/home/company/?dd=WhEjSj9K">사회공헌</a></li>
-				<!---<li><a href="/home/board/?dd=TREuQipPMU0=">소프트웨어 기부안내</a></li>--->
+				<!--<li><a href="/home/board/?dd=TREuQipPMU0=">소프트웨어 기부안내</a></li>-->
 				<li><a href="/home/board/?dd=RRczVw==&brd=Rxs3UA==">보도자료</a></li>
 				<li><a href="/home/recruit/?dd=ShEuVz9FKlYz">Contact US</a></li>
+				<li><a href="#" id="compliance"><img src="http://static.nurisoop.co.kr/images/event/20170222/compliance_button.png" alt="제보하기" /></a></li>
 			</ul>
 			<p>
 				(주)이비즈네트웍스&nbsp;&nbsp;| &nbsp;&nbsp;대표이사: 박기범 &nbsp;&nbsp;|&nbsp;&nbsp; 서울특별시 강남구 선릉로99길 12 모노타워<br />
