--- a/view/index.html
+++ b/view/index.html
@@ -22,8 +22,8 @@
 <meta name="naver-site-verification" content="3fa220bed9a9cb53baf5ea2e5ecd1b8d095310d8"/>
 <link rel="shortcut icon" href="http://img.ebiznetworks.co.kr/ebiz_favicon.ico" />
 <link rel="stylesheet" href="http://static.ebiznetworks.co.kr/css/reset.css?ver=20170208155027" type="text/css"/>
-<link rel="stylesheet" href="http://static.ebiznetworks.co.kr/css/layout_new.css?ver=20170208155027" type="text/css"/>
-<!-- <link rel="stylesheet" href="../src/css/layout_new_tmp.css" type="text/css"/> -->
+<!-- <link rel="stylesheet" href="http://static.ebiznetworks.co.kr/css/layout_new.css?ver=20170208155027" type="text/css"/> -->
+<link rel="stylesheet" href="../src/css/layout_new_tmp.css" type="text/css"/>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://static.ebiznetworks.co.kr/js/index.js"></script>
 <!-- <script src="../src/js/index.js"></script> -->
